# libalgebra-lite

./: CMakeLists.txt  README.md  library.cpp  library.h  playground.cpp  vcpkg.json
cmake/: Libalgebra_liteConfig.cmake.in  config.h.in  lalhelpers.cmake  rationals.h.in
cmake/Modules/: FindBignum.cmake
include/libalgebra_lite/: algebra.h  basis_traits.h  coefficients.h  dense_vector.h  free_tensor.h  hall_set.h  implementation_types.h  index_key.h  lie.h  maps.h  operators.h  packed_integer.h  polynomial.h  polynomial_basis.h  registry.h  shuffle_tensor.h  sparse_vector.h  tensor_basis.h  unpacked_tensor_word.h  vector.h  vector_base.h  vector_bundle.h
include/libalgebra_lite/basis/: hall_set.h  index_key.h  key_range.h  polynomial_basis.h  tensor_basis.h  traits.h
include/libalgebra_lite/detail/: macros.h  traits.h
include/libalgebra_lite/utilities/: packed_integer.h
include/libalgebra_lite/vectors/: dense_vector.h  sparse_vector.h  traits.h
libalgebra_lite/: implementation_types.h
libalgebra_lite/vectors/: dense_vector.h
src/: lie_multiplier.cpp  maps.cpp  polynomial_multiplier.cpp
src/algebra/: free_tensor_multiplier.cpp  half_shuffle_multiplier.cpp  lie_multiplier.cpp  polynomial.cpp  polynomial_ring.cpp  shuffle_multiplier.cpp
src/basis/: hall_set.cpp  monomial.cpp  polynomial_basis.cpp  tensor_basis.cpp  unpacked_tensor_word.cpp
src/coefficients/: floating_fields.cpp  rational_field.cpp
tests/: CMakeLists.txt  vector.cpp
tests/common/: main.cpp
tests/lie/: CMakeLists.txt  hall_basis.cpp  lie_fixture.h  lie_multiplier.cpp
tests/maps/: CMakeLists.txt  maps.cpp  maps_fixture.h
tests/polynomial/: CMakeLists.txt  polynomial_basis.cpp  polynomial_fixture.h
tests/tensors/: CMakeLists.txt  dense_tensor.cpp  free_tensor_multiplier.cpp  half_shuffle_multiplier.cpp  shuffle_tensor_multiplier.cpp  sparse_tensor.cpp  tensor_basis.cpp  tensor_fixture.h  tensor_multiplication.cpp
tests/utilities/: CMakeLists.txt  packed_integer.cpp
